- refine bus station.

--- a/Lingang.City.Brain/View/TourNew/Center_BusStopDetail.html
+++ b/Lingang.City.Brain/View/TourNew/Center_BusStopDetail.html
@@ -8,8 +8,8 @@
             <ul>
                 <li><span>线路：&nbsp;&nbsp;</span><em id="ul_busStopDetail_line">临港4路</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
                 <li><span>方向：&nbsp;&nbsp;</span><em id="ul_busStopDetail_direction">反向</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-                <li><span>距离：&nbsp;&nbsp;</span><em id="ul_busStopDetail_distance">4102</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-                <li><span>时间：&nbsp;&nbsp;</span><em id="ul_busStopDetail_time">510</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+                <!-- <li><span>距离：&nbsp;&nbsp;</span><em id="ul_busStopDetail_distance">4102</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li> -->
+                <li><span>到站时间：&nbsp;&nbsp;</span><em id="ul_busStopDetail_time">已到站</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
             </ul>
         </div>
     </div>
