人员车辆结构化图片显示更新

--- a/Lingang.City.Brain/View/SocietyNew/Center_05.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_05.html
@@ -1,6 +1,6 @@
 ﻿<div class="center-eventlist sxtcar-identify-center">
   <div class="box-top" >
-    <span>车辆信息</span>
+    <span id="bigpercartitle"></span>
     <button type="button" class="box-close"  onclick="require('s_Echart').closeCenterCarIdentify();"></button>
   </div>
   <div class="sxtcar-identify sxtcar-identify-largebox">
