- delete “事件属性”、“发生区域”

--- a/Lingang.City.Brain/View/Industry/Garden/Right_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_Second_01.html
@@ -1,7 +1,12 @@
 ﻿<!-- 事件统计 -->
-<div id="right02_01" class="divbox divbox-rr clearfix cy-ly-rr1 industry-garden-rs1" style="z-index:999;display:block;">
-    <h3><div id="sjtj-title">事件统计</div></h3>
-    <div class="divcont">
+<div id="right02_01" class="divbox divbox-rr clearfix cy-ly-rr1 industry-garden-rs1 divbox-sqzz-hax-lr1" style="z-index:999;display:block;">
+    <h3 class="hastabbox">
+        <div id="sjtj-title">事件统计</div>
+        <div class="charttabbox flex">
+            <a class="charttab"><span>近一周</span></a>
+        </div>
+    </h3>
+    <div class="divcont" style="padding-top: 0.1rem">
         <div class="flex sjxx-tab">
             <button type="button" class="active">总数：<span class="testAerial" id="parkingEnvent-total">20</span></button>
             <button type="button">已处理：<span class="testAerial" id="parkingEnvent-finished">18</span></button>
