--- a/Lingang.City.Brain/View/TourNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/TourNew/Right_Second_02.html
@@ -1,7 +1,12 @@
 ﻿<!-- 景区事件统计 -->
-<div id="right02_02" class="divbox divbox-rr clearfix yqsj tour-rs2" style="z-index:999;" >
-    <h3><div id="jqsjtj">景区事件统计</div></h3>
-    <div class="divcont">
+<div id="right02_02" class="divbox divbox-rr clearfix yqsj tour-rs2 divbox-sqzz-hax-lr1" style="z-index:999;" >
+    <h3 class="hastabbox">
+        <div id="jqsjtj">景区事件统计</div>
+        <div class="charttabbox flex">
+            <a class="charttab"><span>近一月</span></a>
+        </div>
+    </h3>
+    <div class="divcont" style="padding-top: 0rem">
         <div class="jtxx-tabbox">
             <a class="jtxx-tab active" id="jqsj_category" onclick="require('t_Home').jqsjtjClickEvent('category');">类型</a>
             <a class="jtxx-tab" id="jqsj_area" onclick="require('t_Home').jqsjtjClickEvent('area');">区域</a>
