- refine text name.

--- a/Lingang.City.Brain/View/TourNew/Right_Second_02.html
+++ b/Lingang.City.Brain/View/TourNew/Right_Second_02.html
@@ -3,7 +3,7 @@
     <h3 class="hastabbox">
         <div id="jqsjtj">景区事件统计</div>
         <div class="charttabbox flex">
-            <a class="charttab"><span>近一月</span></a>
+            <a class="charttab"><span>今日</span></a>
         </div>
     </h3>
     <div class="divcont" style="padding-top: 0rem">
