- rename event time.

--- a/Lingang.City.Brain/View/TourNew/Right_Second_03.html
+++ b/Lingang.City.Brain/View/TourNew/Right_Second_03.html
@@ -14,7 +14,7 @@
             <li class="yqsjlb-item clearfix">
                 <div class="item-l"></div>
                 <div class="item-r">
-                    <div>拍照时间：2019-03-20 10:49:32</div>
+                    <div>事件时间：2019-03-20 10:49:32</div>
                     <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：花柏路环湖西三路路口北侧疑似渣土车,车牌号:沪DB6977。</div>
                 </div>
@@ -22,7 +22,7 @@
             <li class="yqsjlb-item clearfix">
                 <div class="item-l"></div>
                 <div class="item-r">
-                    <div>拍照时间：2019-03-20 10:49:18</div>
+                    <div>事件时间：2019-03-20 10:49:18</div>
                     <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：花柏路环湖西三路路口北侧疑似渣土车,车牌号:沪ED7837。</div>
                 </div>
@@ -30,7 +30,7 @@
             <li class="yqsjlb-item clearfix">
                 <div class="item-l" id="tq3"></div>
                 <div class="item-r">
-                    <div>拍照时间：2019-03-20 10:47:30</div>
+                    <div>事件时间：2019-03-20 10:47:30</div>
                     <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：临港大道环湖西三路以东250米疑似渣土车,车牌号:沪DD6998。</div>
                 </div>
@@ -38,7 +38,7 @@
             <li class="yqsjlb-item clearfix">
                 <div class="item-l"></div>
                 <div class="item-r">
-                    <div>拍照时间：2019-03-20 10:46:49</div>
+                    <div>事件时间：2019-03-20 10:46:49</div>
                     <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：临港大道环湖西三路以东250米疑似渣土车,车牌号:沪FS9160。</div>
                 </div>
@@ -46,7 +46,7 @@
             <li class="yqsjlb-item clearfix">
                 <div class="item-l"></div>
                 <div class="item-r">
-                    <div>拍照时间：2019-03-20 10:46:08</div>
+                    <div>事件时间：2019-03-20 10:46:08</div>
                     <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：临港大道环湖西三路路口以北190米疑似渣土车,车牌号:沪DT4798。</div>
                 </div>
@@ -54,7 +54,7 @@
             <li class="yqsjlb-item clearfix">
                 <div class="item-l"></div>
                 <div class="item-r">
-                    <div>拍照时间：2019-03-20 10:46:01</div>
+                    <div>事件时间：2019-03-20 10:46:01</div>
                     <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：临港大道环湖西三路以东250米疑似渣土车,车牌号:沪DF0595。</div>
                 </div>
@@ -62,7 +62,7 @@
             <li class="yqsjlb-item clearfix">
                 <div class="item-l"></div>
                 <div class="item-r">
-                    <div>拍照时间：019-03-20 10:40:47</div>
+                    <div>事件时间：019-03-20 10:40:47</div>
                     <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：夏栎路雪绒花路周边疑似黑车,车牌号:苏CX9D10。</div>
                 </div>
@@ -70,7 +70,7 @@
             <li class="yqsjlb-item clearfix">
                 <div class="item-l"></div>
                 <div class="item-r">
-                    <div>拍照时间：2019-03-20 10:40:47</div>
+                    <div>事件时间：2019-03-20 10:40:47</div>
                     <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：临港大道两港大道以东200米周边疑似黑车,车牌号:沪C9R6C5。</div>
                 </div>
@@ -78,7 +78,7 @@
             <li class="yqsjlb-item clearfix">
                 <div class="item-l"></div>
                 <div class="item-r">
-                    <div>拍照时间：2019-03-20 10:40:47</div>
+                    <div>事件时间：2019-03-20 10:40:47</div>
                     <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：橄榄路/沪城环路 西向东周边疑似黑车,车牌号:沪C533GK。</div>
                 </div>
@@ -86,7 +86,7 @@
             <li class="yqsjlb-item clearfix">
                 <div class="item-l"></div>
                 <div class="item-r">
-                    <div>拍照时间：2019-03-20 10:40:47</div>
+                    <div>事件时间：2019-03-20 10:40:47</div>
                     <!-- <div>处理状态：待处置<span>处置人：李立群</span></div> -->
                     <div>事件详情：沪城环路花柏路南侧200米周边疑似黑车,车牌号:沪C990KH。</div>
                 </div>
