招商简报颜色更新

--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -2967,7 +2967,7 @@ dd.pjc-statistic-star >form{
 }
 .zsld-legend-list >li{ color:#0395bc; }
 .zsld-legend-list >li:nth-child(1):after{ color: #b659d8; }
-.zsld-legend-list >li:nth-child(2):after{ color: #183e6d; }
+.zsld-legend-list >li:nth-child(2):after{ color: #00b645; }
 .zsld-legend-list >li:nth-child(3):after{ color: #5673ed; }
 .zsld-legend-list >li:nth-child(4):after{ color: #128cf4; }
 .zsld-legend-list >li:nth-child(5):after{ color: #dd7373; }
