--- a/Lingang.City.Brain/View/Industry/Garden/Right_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_Second_01.html
@@ -3,7 +3,7 @@
     <h3 class="hastabbox">
         <div id="sjtj-title">事件统计</div>
         <div class="charttabbox flex">
-            <a class="charttab"><span>近一周</span></a>
+            <a class="charttab"><span></span></a>
         </div>
     </h3>
     <div class="divcont" style="padding-top: 0.1rem">
