--- a/Lingang.City.Brain/View/Industry/Building/Left_Second_01.html
+++ b/Lingang.City.Brain/View/Industry/Building/Left_Second_01.html
@@ -21,7 +21,7 @@
             <li class="qyjbxx-li"><div>公司类型：</div><span>新一代信息技术产业</span></li>
             <li class="qyjbxx-li"><div>注册资本：</div><span>1000万</span></li>
             <li class="qyjbxx-li"><div>所属行业：</div><span>创新</span></li>
-            <li class="qyjbxx-li"><div>经营范围：</div><span>机器人</span></li>
+            <li class="qyjbxx-li qyjbxx-jyfwli"><div>经营范围：</div><span>机器人</span></li>
             <li class="qyjbxx-li"><div>分支机构数：</div><span>5</span></li>
             <li class="qyjbxx-li"><div>对外投资数：</div><span>10</span></li>
             <li class="qyjbxx-li"><div>企业标签：</div><span>上市</span></li>
