--- a/Lingang.City.Brain/Content/styleNew.css
+++ b/Lingang.City.Brain/Content/styleNew.css
@@ -2217,19 +2217,31 @@ dd.pjc-statistic-star >form{
 	font-size: .32rem;
 	box-shadow: inset 0 0 .25rem rgba(20,154,239,.75);
     box-sizing:border-box;
+    overflow:hidden;
 }
 .qyjbxx-li>div{
 	float: left;
-	margin-right: .2rem;
+    width:6em;
+    text-align:right;
 }
-.qyjbxx-li>span{ color: #0395bc; }
+.qyjbxx-li>span{
+    padding-left:.1rem;
+    float:left;
+    color: #0395bc; 
+    width:calc(100% - 6em);
+    box-sizing:border-box;
+}
 .qyjbxx-jyfwli{
 	padding: .3rem;
 	padding-left: .35rem;
     height: auto;
     line-height: normal;
 }
+.qyjbxx-jyfwli > span { 
+    max-height:1.3rem;
+    overflow:hidden;
 
+}
 
 /*sqzz-wrj-lr*/
 .sqzz-wrj-lr1{
