游客分析标题变更

--- a/Lingang.City.Brain/View/TourNew/Left_First_02.html
+++ b/Lingang.City.Brain/View/TourNew/Left_First_02.html
@@ -1,7 +1,7 @@
 ﻿<!-- 游客分析 -->
 <div id="left01_02" class="divbox divbox-ll clearfix tour-lf2" style="top:5.5rem;z-index:999;display:block;">
     <h3  id="ykfx-title">
-        <div>游客分析</div>
+        <div>游客年龄分析</div>
     </h3>
     <div class="divcont">
         <div class="chartdiv ykfx-chartdiv"><div class="ykfx-chart" id="ykfx-chart"></div></div>
