--- a/Lingang.City.Brain/View/TourNew/Left_First_03.html
+++ b/Lingang.City.Brain/View/TourNew/Left_First_03.html
@@ -1,7 +1,7 @@
 ﻿ <!-- 游客趋势分析 -->
 <div id="left01_03" class="divbox divbox-ll clearfix tour-lf3" style="top:11.5rem;z-index:999;display:block;">
     <h3>
-        <div>游客趋势分析</div>
+        <div>游客人数分析</div>
     </h3>
     <div class="divcont">
         <div class="chartdiv ykqsfx-chartdiv"><div class="ykqsfx-chart" id="ykqsfx-chart"></div></div>
