人员车辆结构画图更新

--- a/Lingang.City.Brain/View/SocietyNew/Center_05.html
+++ b/Lingang.City.Brain/View/SocietyNew/Center_05.html
@@ -5,7 +5,7 @@
   </div>
   <div class="sxtcar-identify sxtcar-identify-largebox">
     <div class="sxtcar-identify-pic">
-      <div  class="iot-percarpic"  id="iot-percarpic"></div>
+      <div  class="iot-percarpic iot-percarpic2"  id="iot-percarpic"></div>
     </div>
     <div class="sxtcar-identify-text">
       <div class="iot-percarmess">
