--- a/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_Second_EventIOT3.html
@@ -13,7 +13,7 @@
             </li>
           <li class="sxtcar-identify flex">
             <div class="sxtcar-identify-pic" >
-              <div class="iot-percarpic"></div>
+              <div class="iot-percarpic iot-percarpic1"></div>
             </div>
             <div class="sxtcar-identify-text">
               <div class="iot-percarmess">
