- refine default view in industry park.

--- a/Lingang.City.Brain/View/Industry/Estate/Left_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Estate/Left_First_02.html
@@ -5,7 +5,7 @@
     </h3>
     <div class="divcont zlxxcy-cont">
         <div class="zlxxcy-contdiv">
-            <ul class="zlxxcy-list">
+            <ul class="zlxxcy-list" style="background: rgba(0, 65, 121, 0.1);">
                 <li class="zlxxcy-li">
                     <div class="zlxxcy-left">
                         <div class="zlxxcy-title">数字创意产业</div>
