能耗单位修改千瓦时

--- a/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
+++ b/Lingang.City.Brain/View/Industry/Garden/Right_First_02.html
@@ -37,17 +37,17 @@
 
         <div class="cy-piebox flex">
             <div class="cy-piediv">
-                <div class="cy-piedata" id="zhnh-dailyenergy"><span>5,896</span>千瓦</div>
+                <div class="cy-piedata" id="zhnh-dailyenergy"><span>5,896</span>千瓦.时</div>
                 <div class="cy-pie"></div>
                 <div class="cy-pietext">园区当日总能耗</div>
             </div>
             <div class="cy-piediv">
-                <div class="cy-piedata" id="zhnh-monthenergy"><span>28</span>千瓦</div>
+                <div class="cy-piedata" id="zhnh-monthenergy"><span>28</span>千瓦.时</div>
                 <div class="cy-pie"></div>
                 <div class="cy-pietext">园区当月总能耗</div>
             </div>
             <div class="cy-piediv">
-                <div class="cy-piedata" id="zhnh-yearenergy"><span>262</span>千瓦</div>
+                <div class="cy-piedata" id="zhnh-yearenergy"><span>262</span>千瓦.时</div>
                 <div class="cy-pie"></div>
                 <div class="cy-pietext">园区当年总能耗</div>
             </div>
