--- a/Lingang.City.Brain/View/SocietyNew/Left_First_01.html
+++ b/Lingang.City.Brain/View/SocietyNew/Left_First_01.html
@@ -31,6 +31,10 @@
                 <div class="item-l"></div>
                 <div class="item-r"><div class="item-r-name">智能井盖</div><div class="item-r-data testAerial" id="cgq-znjg">102</div></div>
             </li>
+            <li class="cgq-li">
+                <div class="item-l"></div>
+                <div class="item-r"><div class="item-r-name">道路</div><div class="item-r-data testAerial" id="cgq-dl">102</div></div>
+            </li>
         </ul>
     </div>
 </div>
